# pdf-batch-printer

./: .gitignore  LICENSE  README.md  install.sh  pdf_batch_printer.spec  pyproject.toml
.github/workflows/: build.yml
installer/linux/deb/DEBIAN/: control  postinst  postrm
installer/linux/deb/usr/share/applications/: pdf-batch-printer.desktop
installer/windows/: installer.iss
scripts/: build_linux.sh  build_windows.bat
src/: main.py
src/core/: printer.py  worker.py
src/gui/: main_window.py
