[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf-batch-printer"
version = "1.0.0"
description = "Cross-platform batch PDF printing application"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "BK Bilgi Teknolojileri"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Printing",
]
dependencies = [
    "PyQt6>=6.5.0",
]

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.0.0",
    "pytest>=7.0.0",
]

[project.urls]
"Homepage" = "https://github.com/mylcn59/pdf-batch-printer"
"Bug Tracker" = "https://github.com/mylcn59/pdf-batch-printer/issues"

[project.scripts]
pdf-batch-printer = "main:main"

[project.gui-scripts]
pdf-batch-printer-gui = "main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
